Working input field angular

--- a/libs/ui-core-atoms/src/lib/button/button.component.html
+++ b/libs/ui-core-atoms/src/lib/button/button.component.html
@@ -1,4 +1,4 @@
 <button
   class="bui-bg-red-400 bui-rounded-md bui-px-4 bui-py-2 bui-cursor-pointer hover:bui-bg-red-300 active:bui-bg-red-500">
-  I'm a Angular-Button
+  {{ text() }}
 </button>
